# dossier

./: .gitignore  LICENSE  README.md  context.toml  dossier.toml  install.sh  pyproject.toml
.dossier/: context.toml
.github/workflows/: release.yml
app/: Info.plist  Makefile  Package.swift  README.md
app/Sources/Dossier/App/: AppModel+Actions.swift  AppModel.swift  DossierApp.swift
app/Sources/Dossier/Builder/: BuilderView.swift  CsvSectionBody.swift  FilePickerPopover.swift  FolderPickerPopover.swift  SectionCardView.swift  ShortcutsCheatSheet.swift
app/Sources/Dossier/Engine/: Engine.swift  ForgeResult.swift
app/Sources/Dossier/Explorer/: FileExplorerView.swift  FileSystemWatcher.swift  FileTree.swift
app/Sources/Dossier/Git/: GitBranchBar.swift  GitClient.swift
app/Sources/Dossier/Model/: Spec.swift  SpecIO.swift
app/Sources/Dossier/Preview/: FilePreviewPanel.swift  PreviewView.swift
app/Sources/Dossier/Support/: CSVHeader.swift  Defaults.swift
app/Sources/Dossier/Theme/: Motion.swift  SegmentedControl.swift  Theme.swift  ThemeComponents.swift
app/Sources/Dossier/Views/: ContentView.swift  EmptyStates.swift  (+3 more)
plan/: ROADMAP.md
src/ctxforge/: __init__.py  cli.py  render.py  spec.py  tree.py
src/dossier/: __init__.py  cli.py  config.py  parse.py  render.py  report.py  sections.py  spec.py  tokens.py  tree.py
tests/: conftest.py  test_cli.py  test_config.py  test_csv.py  test_folder.py  test_forge_json.py  test_parse.py  test_render.py  test_spec.py  test_tokens.py  test_tree.py
tests/fixtures/sample_repo/: .gitignore  README.md
(+1 files in other folders)
