[project]
name = "ctxforge"
version = "0.0.0"
description = "Assemble a structured text prompt from a local codebase via a declarative spec."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyperclip>=1.8",
    "tiktoken>=0.7",
    "pathspec>=0.12",
]

[project.scripts]
ctxforge = "ctxforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxforge"]

[dependency-groups]
dev = [
    "pytest>=8",
]
